<resources>
    <string name="app_name">Ellori</string>
    <string name="icono">icono de ellori</string>
    <string name="icono_dos">segundo icono de ellori</string>

    <string name="icono_log">Icono del loguin</string>
    <string name="desc_icono">este es el icono</string>
    <string name="facebook_app_id">2280148148962434</string>
    <string name="fb_login_protocol_scheme">fb2280148148962434</string>
    <string name="correo">Introduce tu Correo electronico</string>
    <string name="pass">Introduce tu Contraseña</string>
    <string name="btn_entrar">Entrar</string>
    <string name="btn_registrar">Registrarse</string>
    <string name="btn_saltar">Saltar</string>
    <string name="forget_password">¿Has olvidado tu contraseña?</string>

    <string name="icono_registro">Icono de la activity registro</string>
    <string name="registrarse">¡¡Registrate en Ellori!!</string>
    <string name="text_correo">Ingresa un correo electronico</string>
    <string name="text_pass">Ingresa una contraseña </string>
    <string name="conf_pass">Confirma tu contraseña </string>

    <string name="btn_info">boton a la funcionalidad</string>

    <string name="icono_menu">icono del menu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Ellori</string>
    <string name="nav_header_subtitle">Sing Languaje System</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_tutorial">Tutorial</string>
    <string name="menu_configuracione">Configuracion</string>
    <string name="menu_Consejos">Consejos</string>
    <string name="menu_sugerencias">Sugerencias</string>
    <string name="menu_ajustes">Ajustes</string>
    <string name="menu_salir">Salir</string>

    <string name="constraintLayout">caja fuerte</string>
    <string name="title_activity_menusito"></string>

    <string name="menu_imagen">imagen del menu</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="conexion">Conexion</string>
    <string name="recibiendo">Interpretando</string>
    <string name="icono_de_las_pantallas">iconos de las pantallas</string>
    <string name="txt_pantallas">Textos de las pantallas</string>

    <string name="btn_comenzar">comenzar</string>
    <string name="btn_detener">detener</string>
    <string name="btn_volver">volver</string>

    <string name="Mdesc">Este es una imagen boton</string>
    <string name="informativo_señas_texto">Aqui aparecera el texto que se espera interpretar desde el dispositivo guante</string>
    <string name="btn_traducir">Traducir</string>
    <string name="title_activity_scrolling">Ellori menu</string>
    <string name="title_activity_emociones_dos">emociones_dos</string>


    <string name="descripcion_ajustes">activity ajues</string>
    <string name="Correo_ajustes">Correo</string>
    <string name="nombre_ajustes">Nombre de usuario</string>
    <string name="btn_Guardar_ajustes">Guardar</string>
    <string name="abrirAlgunoAjustes">Abrir alguno</string>

    <string name="descripcionAnimales">activity animales</string>
    <string name="btn_GuardarBuscarAnimales">Buscar</string>
    <string name="Busca_aUnAnimal">Busca a un animal</string>
    <string name="animalesAnimales">Animales</string>

    <string name="descripcionComida">activity comida</string>
    <string name="btn_GuardarBuscarComida">Buscar</string>
    <string name="Busca_aUnComida">Busca a un alimento</string>
    <string name="comidaComida">Alimentos</string>

    <string name="descripcionConfiguracion">activity Configuracion</string>
    <string name="txtVisibilidadActivar">Visibilidad</string>
    <string name="txtDispositivosActivar">Dispositivos</string>
    <string name="txtAjustesActivar">Activar</string>

</resources>
