<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@mipmap/catorce"
            android:title="@string/menu_tutorial" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@mipmap/dies"
            android:title="@string/menu_configuracione" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@mipmap/consejos"
            android:title="@string/menu_Consejos" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@mipmap/once"
            android:title="@string/menu_sugerencias" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/menu_ajustes" />
            <item
                android:id="@+id/nav_send"
                android:icon="@mipmap/power"
                android:title="@string/menu_salir" />
        </menu>
    </item>

</menu>
